# TripCraftBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ai_agent.py  ai_log_analyzer.py  config.py  docker-compose.yml  local_start.sh  main.py  pyproject.toml  requirements.txt
bot/: __init__.py
bot/application/: __init__.py  use_cases.py
bot/domain/: README.md  __init__.py  constants.py  interfaces.py  models.py
bot/handlers/: __init__.py  categories.py  results.py  start.py  utils.py
bot/infrastructure/: __init__.py  base.py  config_validator.py  llm_recommendation_service.py  redis_repository.py  service_factory.py
bot/keyboards/: __init__.py  inline.py
bot/middleware/: error_handler.py
bot/presentation/: __init__.py  base.py
bot/states/: __init__.py  travel.py
bot/utils/: __init__.py  formatter.py  openrouter.py
tests/: __init__.py  test_config_validation.py  test_domain_models.py  test_formatter.py  test_handlers.py  test_llm_recommendation_service.py  test_openrouter.py
